--- a/image/templates/helm/stackrox-central/templates/01-central-06-default-tls-cert-secret.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-06-default-tls-cert-secret.yaml
@@ -16,7 +16,7 @@ type: kubernetes.io/tls
 stringData:
   tls.crt: |
     {{- ._rox.central._defaultTLS.Cert | nindent 4 }}
-  tls.key:
+  tls.key: |
     {{- ._rox.central._defaultTLS.Key | nindent 4 }}
 
 {{- end }}
