--- a/image/templates/helm/stackrox-central/templates/02-scanner-02-db-password-secret.yaml
+++ b/image/templates/helm/stackrox-central/templates/02-scanner-02-db-password-secret.yaml
@@ -2,6 +2,7 @@
 
 {{- if not ._rox.scanner.disable -}}
 
+{{- if ._rox.scanner._dbPassword -}}
 {{- if not (kindIs "invalid" ._rox.scanner._dbPassword.value) -}}
 
 apiVersion: v1
@@ -20,6 +21,7 @@ stringData:
   password: |
     {{- ._rox.scanner._dbPassword.value | nindent 4 }}
 
+{{- end -}}
 {{- end -}}
 
 {{ end -}}
