--- a/image/templates/helm/stackrox-central/templates/01-central-04-htpasswd-secret.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-04-htpasswd-secret.yaml
@@ -1,5 +1,6 @@
 {{- include "srox.init" . -}}
 
+{{- if ._rox.central._adminPassword -}}
 {{- if ._rox.central._adminPassword.htpasswd -}}
 apiVersion: v1
 kind: Secret
@@ -17,4 +18,5 @@ stringData:
   htpasswd: |
     {{- ._rox.central._adminPassword.htpasswd | nindent 4 }}
 
+{{- end -}}
 {{- end -}}
