--- a/image/templates/helm/stackrox-central/templates/01-central-09-endpoints-config.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-09-endpoints-config.yaml
@@ -1,5 +1,6 @@
 {{- include "srox.init" . -}}
 
+{{- if ._rox.central._endpointsConfig -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -12,3 +13,5 @@ metadata:
 data:
   endpoints.yaml: |
     {{- ._rox.central._endpointsConfig | nindent 4 }}
+
+{{- end -}}
