--- a/roxctl/help/help.properties
+++ b/roxctl/help/help.properties
@@ -179,6 +179,8 @@ helm.long =
 helm.output.short = Output a Helm Chart.
 helm.output.long =
 
+helm.derive-local-values.short = Derive local Helm values from cluster configuration.
+helm.derive-local-values.long =
 
 version.short = Display the current roxctl version.
 version.long = Display the current roxctl version.
