Enable feature flag for new installation experience (#6636)
Co-authored-by: Malte Isberner <mi@stackrox.com>

--- a/image/templates/helm/stackrox-central/templates/00-storage-class.yaml
+++ b/image/templates/helm/stackrox-central/templates/00-storage-class.yaml
@@ -1,6 +1,7 @@
 {{- include "srox.init" . -}}
 
 {{- if ._rox.central.persistence._pvcCfg }}
+{{- if ._rox.central.persistence._pvcCfg.storageClass -}}
 {{- if eq ._rox.central.persistence._pvcCfg.storageClass "stackrox-gke-ssd" }}
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -17,4 +18,5 @@ provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-ssd
 {{- end }}
+{{- end -}}
 {{- end }}
