--- a/image/templates/helm/scannerchart/templates/deployment.yaml
+++ b/image/templates/helm/scannerchart/templates/deployment.yaml
@@ -97,7 +97,9 @@ spec:
           successThreshold: 1
         volumeMounts:
         - mountPath: /etc/ssl
-          name: central-etc-ssl-volume
+          name: scanner-etc-ssl-volume
+        - mountPath: /etc/pki/ca-trust
+          name: scanner-etc-pki-volume
         - mountPath: /usr/local/share/ca-certificates/
           name: additional-ca-volume
           readOnly: true
@@ -122,7 +124,9 @@ spec:
           optional: true
           secretName: additional-ca
       - emptyDir: {}
-        name: central-etc-ssl-volume
+        name: scanner-etc-ssl-volume
+      - emptyDir: {}
+        name: scanner-etc-pki-volume
       - name: scanner-config-volume
         configMap:
           name: scanner-config
