--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2302,6 +2302,8 @@ jobs:
       - persist_to_workspace:
           root: /go/src/github.com/stackrox/rox
           paths:
+            - bin/linux/roxctl
+            - bin/linux/upgrader
             - image/rhel/bundle.tar.gz
 
       - cleanup-clusters-on-fail
