ROX-5377: Fix roxctl deployment check help msg (#6648)
Co-authored-by: Koki Yoshida <koki@stackrox.com>

--- a/roxctl/help/help.properties
+++ b/roxctl/help/help.properties
@@ -105,7 +105,7 @@ collector.short = Commands related to the Collector service.
 collector.long =
 
 deployment.check.short = Check deployments for deploy time policy violations.
-deployment.check.long = Check deployments for deploy time policy violations, and report if any deployment violates at least one enforced deploy time policy.
+deployment.check.long = Check deployments for deploy time policy violations, and exit with an non-zero code if at least one of the violated policies has deploy time enforcement turned on.
 
 deployment.short = Commands related to deployments.
 deployment.long =
