--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -15,6 +15,7 @@
         "@stackrox/ui-components": "*",
         "axios": "^0.20.0",
         "computed-style-to-inline-style": "^3.0.0",
+        "connected-react-router": "^6.8.0",
         "core-js": "^3.6.5",
         "cytoscape": "^3.15.2",
         "cytoscape-cose-bilkent": "^4.0.0",
@@ -60,11 +61,10 @@
         "react-numeric-input": "^2.2.3",
         "react-onclickoutside": "^6.8.0",
         "react-popper": "0.9.0",
-        "react-redux": "^5.0.7",
+        "react-redux": "^7.2.1",
         "react-responsive": "^8.1.0",
-        "react-router-dom": "^4.3.1",
+        "react-router-dom": "^5.2.0",
         "react-router-prop-types": "^1.0.5",
-        "react-router-redux": "^5.0.0-alpha.9",
         "react-select": "^2.0.0",
         "react-slick": "^0.21.0",
         "react-spinners": "^0.9.0",
@@ -76,7 +76,7 @@
         "recharts": "^1.8.5",
         "redoc": "^2.0.0-rc.40",
         "redux": "^4.0.5",
-        "redux-form": "^7.4.2",
+        "redux-form": "^8.3.6",
         "redux-saga": "^0.16.0",
         "reselect": "^4.0.0",
         "slick-carousel": "^1.8.1",
@@ -160,7 +160,6 @@
         "postcss-cli": "^7.1.2",
         "prettier": "2.0.5",
         "randomstring": "^1.1.5",
-        "react-router-enzyme-context": "^1.2.0",
         "react-scripts": "^3.4.1",
         "react-test-renderer": "^16.13.1",
         "redux-immutable-state-invariant": "^2.1.0",
