--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -30,6 +30,8 @@
         "deepmerge": "^3.2.0",
         "events": "^3.2.0",
         "file-saver": "^1.3.8",
+        "fontsource-open-sans": "^3.0.9",
+        "fontsource-open-sans-condensed": "^3.0.9",
         "formik": "^2.1.4",
         "framer-motion": "^2.6.13",
         "graphql": "^15.3.0",
@@ -83,8 +85,6 @@
         "store": "^2.0.12",
         "styled-components": "^5.1.1",
         "tippy.js": "^6.2.6",
-        "typeface-open-sans": "^0.0.54",
-        "typeface-open-sans-condensed": "^0.0.72",
         "use-deep-compare-effect": "^1.3.1",
         "yup": "^0.29.3"
     },
